[package]
name = "d2_crit_multiplier"
version = "0.1.0"
edition = "2021"
authors = ["Harm <harm@brammer.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", features = ["serde_derive"]}
thiserror = "1.0.48"

[dev-dependencies]
serde_json = "1.0.107"
