[package]
name = "d2_crit_multiplier"
version = "0.1.0"
edition = "2021"
authors = ["Harm <harm@brammer.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "~1", features = ["serde_derive"], optional = true}
thiserror = "~1"

[dev-dependencies]
serde_json = "~1"

[features]
default = ["serde"]
serde = ["dep:serde"]